# TestHand

./: .gitignore  README.md  SQLSchema.md  asset-manifest.json  docker-compose.yaml  example.env  index.html
.github/workflows/: react-ci-cd.yaml  rust-ci.yaml  rust.yml
Group Project Reports/: may15.md
backend/: Cargo.toml  README.md
backend/api/: Cargo.toml  Dockerfile  README.md
backend/api/src/: config.rs  db.rs  main.rs
backend/external_api/: README.md  go.mod  go.sum  main.go
backend/external_api/api/: api.go  user.go
backend/external_api/db/: db.go
backend/external_api/models/: models.go
backend/internal_api/: Cargo.toml  README.md
backend/internal_api/migrations/: 20220516094136_create_tables.sql  20220516094518_create-tables.sql  20220517005827_create-tables.sql
backend/internal_api/src/: api.rs  config.rs  db.rs  logger.rs  main.rs  user.rs
backend/internal_api/src/api/: item.rs  mod.rs  user.rs
backend/internal_api/src/models/: item.rs  user.rs
backend/internal_api/src/models/queries/: sample-user1.psql  sample-user2.psql
backend/src/: api.rs  db.rs  logger.rs  main.rs  user.rs
chat-service/backend/: .env.example  .gitignore  Dockerfile  README.md  README.me  app.py  docker-compose.yml  requirements.txt  seed-data.redis
frontend/: .gitignore  README.md  npm-shrinkwrap.json  package.json
frontend/public/: index.html  lendahand.css
frontend/src/: App.tsx  Constants.ts  MockData.ts  index.tsx
static/css/: main.15be4434.css  main.15be4434.css.map
static/js/: main.c3c150a1.js  main.c3c150a1.js.map
(+11 files in other folders)
