[package]
name = "lah_int_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
log = "0.4.0"
serde = {version = "1.0.137", features = ["derive"]}
serde_json = "1.0"
dotenv = "0.14.1"
sqlx = { version = "0.5", features = [ "runtime-actix-native-tls" , "postgres" ] }